# personal-recipe-rag

./: .gitignore  pyproject.toml
api/: datamodels.py  main_api.py
kuberneters_scripts/: fast_api.yaml  ollama.yaml  postgres_sql.yaml
