[project]
name = "k3s-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "instructor>=1.14.5",
    "pip>=26.0.1",
    "pydentic>=0.0.1.dev3",
    "spacy>=3.8.11",
    "uvicorn>=0.39.0",
]
